# LearningTDD

./: .gitignore
EclipseTddTest/.metadata/: version.ini
EclipseTddTest/.metadata/.plugins/org.eclipse.cdt.core/: TddTestProject.language.settings.xml
EclipseTddTest/.metadata/.plugins/org.eclipse.core.resources/.projects/TddTestProject/.indexes/: properties.index
EclipseTddTest/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
EclipseTddTest/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
EclipseTddTest/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
EclipseTddTest/.metadata/.plugins/org.eclipse.debug.core/.launches/: TddTestProject Debug.launch  TddTestProject.launch
EclipseTddTest/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
EclipseTddTest/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
EclipseTddTest/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
EclipseTddTest/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
EclipseTddTest/TddTestProject/: .cproject  .project
EclipseTddTest/TddTestProject/Debug/: TddTestProject  makefile
EclipseTddTest/TddTestProject/Debug/src/: subdir.mk
EclipseTddTest/TddTestProject/src/: TddTestProject.cpp
fizzBuzzExample/: CMakeLists.txt  main.cpp
supermarketCheckoutKata/: CMakeLists.txt  Checkout.cpp  Checkout.h  main.cpp
